# hello-vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.ubuntu  CMakeUserPresets.json  CMakeUserPresets.json.mac  CMakeUserPresets.json.ubuntu
.config/linux/: CMakePresets.json  launch.json
.config/mac/: CMakePresets.json  launch.json
mylib/: CMakeLists.txt  fib.cc  fib.h  insertion_sort.cc  insertion_sort.h
scripts/: config.sh
src/: main.cc
tests/: CMakeLists.txt  test_insertion_sort.cc  tests.cc
tests/src/: tests.cc
